--- a/app/src/scss/_navbar-search.scss
+++ b/app/src/scss/_navbar-search.scss
@@ -51,7 +51,7 @@
     align-items: center;
     justify-content: flex-start;
     position: absolute;
-    top: 6.5rem;
+    top: 4.65rem;
     left: 0;
     right: 0;
     min-height: 100vh;
